--- a/src/App.css
+++ b/src/App.css
@@ -253,3 +253,16 @@ footer p:nth-child(2){
 	bottom: 35px;
 	font-size: 14px; 
 }
+.skill-list i {
+    font-size: 4rem;
+  }
+
+  .skill-title{
+    font-size: 3rem;
+    width: 250px;
+    margin: 3rem auto;
+    text-align: center;
+  }
+  #skills{
+      background-color:#968d8d96;
+  }
